--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+appdirs==1.4.0
+appnope==0.1.0
 backports.shutil-get-terminal-size==1.0.0
 cffi==1.7.0
 cryptography==1.5
 decorator==4.0.10
 Django==1.10.5
 django-appconf==1.0.2
+django-debug-toolbar==1.7
 django-extensions==1.7.3
 django-ipware==1.1.5
 django-registration==2.1.2
@@ -13,10 +16,12 @@ idna==2.1
 ipaddress==1.0.16
 ipython==5.1.0
 ipython-genutils==0.1.0
+lxml==3.7.2
 MySQL-python==1.2.5
 ndg-httpsclient==0.4.2
 nltk==3.2.1
 numpy==1.11.1
+packaging==16.8
 pandas==0.18.1
 pathlib2==2.1.0
 pexpect==4.2.1
@@ -29,6 +34,7 @@ pycparser==2.14
 Pygments==2.1.3
 pyocr==0.4.2
 pyOpenSSL==16.1.0
+pyparsing==2.1.10
 pytesseract==0.1.6
 python-dateutil==2.5.3
 python-memcached==1.58
@@ -37,7 +43,9 @@ requests==2.11.1
 short-url==1.2.2
 simplegeneric==0.8.1
 six==1.10.0
+sqlparse==0.2.3
 traitlets==4.2.2
+unicodecsv==0.14.1
 Wand==0.4.3
 wcwidth==0.1.7
 yolk==0.4.3
