--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-appconf==1.0.2
 django-debug-toolbar==1.7
 django-extensions==1.7.3
 django-ipware==1.1.5
+django-jenkins==0.110.0
 django-registration==2.1.2
 Django-Select2==5.8.9
 enum34==1.1.6
