--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.0
 appnope==0.1.0
 backports.shutil-get-terminal-size==1.0.0
 cffi==1.7.0
+coverage==4.4
 cryptography==1.5
 decorator==4.0.10
 Django==1.10.5
