--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 appdirs==1.4.0
 appnope==0.1.0
+astroid==1.5.2
+backports.functools-lru-cache==1.4
 backports.shutil-get-terminal-size==1.0.0
 cffi==1.7.0
+configparser==3.5.0
 coverage==4.4
 cryptography==1.5
 decorator==4.0.10
@@ -18,7 +21,11 @@ idna==2.1
 ipaddress==1.0.16
 ipython==5.1.0
 ipython-genutils==0.1.0
+isort==4.2.5
+jslint==0.6.0
+lazy-object-proxy==1.3.1
 lxml==3.7.2
+mccabe==0.6.1
 MySQL-python==1.2.5
 ndg-httpsclient==0.4.2
 nltk==3.2.1
@@ -26,6 +33,7 @@ numpy==1.11.1
 packaging==16.8
 pandas==0.18.1
 pathlib2==2.1.0
+pep8==1.7.0
 pexpect==4.2.1
 pickleshare==0.7.4
 Pillow==3.4.1
@@ -34,6 +42,7 @@ ptyprocess==0.5.1
 pyasn1==0.1.9
 pycparser==2.14
 Pygments==2.1.3
+pylint==1.7.1
 pyocr==0.4.2
 pyOpenSSL==16.1.0
 pyparsing==2.1.10
@@ -44,10 +53,12 @@ pytz==2016.6.1
 requests==2.11.1
 short-url==1.2.2
 simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.10.0
 sqlparse==0.2.3
 traitlets==4.2.2
 unicodecsv==0.14.1
 Wand==0.4.3
 wcwidth==0.1.7
+wrapt==1.10.10
 yolk==0.4.3
