--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ prompt-toolkit==1.0.7
 ptyprocess==0.5.1
 pyasn1==0.1.9
 pycparser==2.14
+pyflakes==1.5.0
 Pygments==2.1.3
 pylint==1.7.1
 pyocr==0.4.2
